# realtime-recommendation-engine

./: .env.example  .gitignore  .gitmessage  .grype.yaml  .releaserc.json  .trivyignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  grype-ignore.yaml  package-lock.json  package.json  sonar-project.properties
.github/workflows/: ci-cd.yml  code-quality.yml  dependency-update.yml  docs.yml  k8s-test.yml  main.yml  performance.yml  release.yml  security.yml  workflow-config.md
docs/: index.html
docs/documentation/: api-spec.md  architecture.md  deployment.md  performance.md  security.md
helm/recommendation-system/: Chart.yaml  values.yaml
infrastructure/kafka/: topics-setup.sh
infrastructure/monitoring/: prometheus.yml
infrastructure/postgres/: init.sql
infrastructure/redis/: redis.conf
k8s/base/: configmap.yaml  kustomization.yaml  ml-service.yaml  namespace.yaml  secrets.yaml  stub-services.yaml
monitoring/: prometheus.yml
scripts/: generate-architecture.py  generate-mock-screenshots.py  generate-sample-data.py  generate_ab_test_results.py  generate_performance_report.py  init-db.sql  integration-tests.py  load-test-data.sh  setup-env.sh  simulate_traffic.sh  test-phase2.sh  test-phase3.sh  test-phase4.sh
services/cache-service/: Cargo.toml  Dockerfile  Makefile
services/cache-service/src/: cache.rs  config.rs  datadog.rs  error.rs  handlers.rs  main.rs  metrics.rs  store.rs
services/cache-service/tests/: cache_service_tests.rs
terraform/: eks.tf  elasticache.tf  main.tf  msk.tf  rds.tf  variables.tf
(+107 files in other folders)
