[package]
name = "cache_service"
version = "0.1.0"
edition = "2021"

[dependencies]
 tokio      = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
 redis      = { version = "0.23", default-features = false, features = ["aio", "tokio-comp"] }
 serde      = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 warp       = "0.3"
 thiserror  = "1.0"
 log        = "0.4"
 env_logger = "0.9"

[dev-dependencies]
tokio-test = "0.4"
